--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "25151f90",
+   "id": "b8ee9195",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a29d4b81",
+   "id": "d46065ae",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cac8542c",
+   "id": "b9ccc333",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ee05ad",
+   "id": "99ecfb66",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1a7134a",
+   "id": "913972c6",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "606e8902",
+   "id": "ee93382f",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1d4118a",
+   "id": "d54cdff7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:38.150713Z",
-     "iopub.status.busy": "2025-01-30T13:59:38.150538Z",
-     "iopub.status.idle": "2025-01-30T13:59:41.117536Z",
-     "shell.execute_reply": "2025-01-30T13:59:41.116951Z"
+     "iopub.execute_input": "2025-01-30T14:09:13.691140Z",
+     "iopub.status.busy": "2025-01-30T14:09:13.690712Z",
+     "iopub.status.idle": "2025-01-30T14:09:16.636736Z",
+     "shell.execute_reply": "2025-01-30T14:09:16.636094Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8feaa47",
+   "id": "5adbe6c2",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12986c65",
+   "id": "4d51437f",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63ebf3c4",
+   "id": "8853672a",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3c0ce07",
+   "id": "1e1f5027",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cef43c47",
+   "id": "eb3a965b",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb5d1652",
+   "id": "d5f9e531",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b88ab710",
+   "id": "eb9e1963",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b9c5600",
+   "id": "c6dbb76d",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "41805079",
+   "id": "e9660af3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:41.119849Z",
-     "iopub.status.busy": "2025-01-30T13:59:41.119426Z",
-     "iopub.status.idle": "2025-01-30T13:59:43.020194Z",
-     "shell.execute_reply": "2025-01-30T13:59:43.019565Z"
+     "iopub.execute_input": "2025-01-30T14:09:16.638930Z",
+     "iopub.status.busy": "2025-01-30T14:09:16.638530Z",
+     "iopub.status.idle": "2025-01-30T14:09:18.496372Z",
+     "shell.execute_reply": "2025-01-30T14:09:18.495899Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a0d7c9b",
+   "id": "17f1d5f1",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "75303571",
+   "id": "031d74da",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:43.022238Z",
-     "iopub.status.busy": "2025-01-30T13:59:43.021790Z",
-     "iopub.status.idle": "2025-01-30T13:59:43.025262Z",
-     "shell.execute_reply": "2025-01-30T13:59:43.024700Z"
+     "iopub.execute_input": "2025-01-30T14:09:18.498096Z",
+     "iopub.status.busy": "2025-01-30T14:09:18.497824Z",
+     "iopub.status.idle": "2025-01-30T14:09:18.501286Z",
+     "shell.execute_reply": "2025-01-30T14:09:18.500789Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6617f9d5",
+   "id": "07d636f7",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "606ed476",
+   "id": "1cc4f5db",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d09be5ed",
+   "id": "d992a167",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aafaad9d",
+   "id": "86cfe83d",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "013af1a9",
+   "id": "d390b2cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:43.027115Z",
-     "iopub.status.busy": "2025-01-30T13:59:43.026795Z",
-     "iopub.status.idle": "2025-01-30T13:59:43.070165Z",
-     "shell.execute_reply": "2025-01-30T13:59:43.069642Z"
+     "iopub.execute_input": "2025-01-30T14:09:18.502950Z",
+     "iopub.status.busy": "2025-01-30T14:09:18.502791Z",
+     "iopub.status.idle": "2025-01-30T14:09:18.544201Z",
+     "shell.execute_reply": "2025-01-30T14:09:18.543689Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61ca07f0",
+   "id": "cafd1368",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "db7e25a5",
+   "id": "2608443d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:43.071962Z",
-     "iopub.status.busy": "2025-01-30T13:59:43.071779Z",
-     "iopub.status.idle": "2025-01-30T13:59:43.137963Z",
-     "shell.execute_reply": "2025-01-30T13:59:43.137381Z"
+     "iopub.execute_input": "2025-01-30T14:09:18.545983Z",
+     "iopub.status.busy": "2025-01-30T14:09:18.545706Z",
+     "iopub.status.idle": "2025-01-30T14:09:18.611077Z",
+     "shell.execute_reply": "2025-01-30T14:09:18.610583Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3fd1364",
+   "id": "50217e81",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29829ce1",
+   "id": "58166fc5",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "71bdfc7e",
+   "id": "88fe0b5e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:43.140074Z",
-     "iopub.status.busy": "2025-01-30T13:59:43.139632Z",
-     "iopub.status.idle": "2025-01-30T13:59:43.166388Z",
-     "shell.execute_reply": "2025-01-30T13:59:43.165849Z"
+     "iopub.execute_input": "2025-01-30T14:09:18.612769Z",
+     "iopub.status.busy": "2025-01-30T14:09:18.612600Z",
+     "iopub.status.idle": "2025-01-30T14:09:18.638831Z",
+     "shell.execute_reply": "2025-01-30T14:09:18.638344Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ac2780d",
+   "id": "21b15ee2",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc81c605",
+   "id": "82186bc4",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a90cc5c",
+   "id": "b4896083",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b116116",
+   "id": "1cf802cd",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "417e3761",
+   "id": "e9037bcd",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "95d941b6",
+   "id": "81d30d9d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:43.168757Z",
-     "iopub.status.busy": "2025-01-30T13:59:43.168163Z",
-     "iopub.status.idle": "2025-01-30T13:59:43.173598Z",
-     "shell.execute_reply": "2025-01-30T13:59:43.173111Z"
+     "iopub.execute_input": "2025-01-30T14:09:18.640901Z",
+     "iopub.status.busy": "2025-01-30T14:09:18.640548Z",
+     "iopub.status.idle": "2025-01-30T14:09:18.644752Z",
+     "shell.execute_reply": "2025-01-30T14:09:18.644170Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3f64117",
+   "id": "26852cde",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bdcb0abe",
+   "id": "bb7fb6e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:43.175542Z",
-     "iopub.status.busy": "2025-01-30T13:59:43.175191Z",
-     "iopub.status.idle": "2025-01-30T13:59:43.178226Z",
-     "shell.execute_reply": "2025-01-30T13:59:43.177655Z"
+     "iopub.execute_input": "2025-01-30T14:09:18.646596Z",
+     "iopub.status.busy": "2025-01-30T14:09:18.646161Z",
+     "iopub.status.idle": "2025-01-30T14:09:18.649096Z",
+     "shell.execute_reply": "2025-01-30T14:09:18.648646Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add00dc4",
+   "id": "68251a41",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c3260e9e",
+   "id": "332b4eaa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:43.179890Z",
-     "iopub.status.busy": "2025-01-30T13:59:43.179713Z",
-     "iopub.status.idle": "2025-01-30T13:59:45.731812Z",
-     "shell.execute_reply": "2025-01-30T13:59:45.731223Z"
+     "iopub.execute_input": "2025-01-30T14:09:18.650633Z",
+     "iopub.status.busy": "2025-01-30T14:09:18.650459Z",
+     "iopub.status.idle": "2025-01-30T14:09:21.157499Z",
+     "shell.execute_reply": "2025-01-30T14:09:21.156972Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48dbc2e7",
+   "id": "dffe97c3",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75276750",
+   "id": "a9f24cdf",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b1300a",
+   "id": "57e83809",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db10a8ef",
+   "id": "a263f9ef",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0e0c7dfe",
+   "id": "12876303",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:45.734239Z",
-     "iopub.status.busy": "2025-01-30T13:59:45.733674Z",
-     "iopub.status.idle": "2025-01-30T13:59:45.737364Z",
-     "shell.execute_reply": "2025-01-30T13:59:45.736816Z"
+     "iopub.execute_input": "2025-01-30T14:09:21.159615Z",
+     "iopub.status.busy": "2025-01-30T14:09:21.159249Z",
+     "iopub.status.idle": "2025-01-30T14:09:21.163006Z",
+     "shell.execute_reply": "2025-01-30T14:09:21.162533Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f3db467fd80>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f48c22c79c0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c3b3db",
+   "id": "39b013a5",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85efd453",
+   "id": "27b3c3f4",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8258aa02",
+   "id": "4b417ed5",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb303435",
+   "id": "b593841d",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f8896154",
+   "id": "8b430ee8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:45.739093Z",
-     "iopub.status.busy": "2025-01-30T13:59:45.738915Z",
-     "iopub.status.idle": "2025-01-30T13:59:45.741918Z",
-     "shell.execute_reply": "2025-01-30T13:59:45.741468Z"
+     "iopub.execute_input": "2025-01-30T14:09:21.164962Z",
+     "iopub.status.busy": "2025-01-30T14:09:21.164552Z",
+     "iopub.status.idle": "2025-01-30T14:09:21.167423Z",
+     "shell.execute_reply": "2025-01-30T14:09:21.166929Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "18cc8ee9",
+   "id": "1960e3dd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T13:59:45.743753Z",
-     "iopub.status.busy": "2025-01-30T13:59:45.743281Z",
-     "iopub.status.idle": "2025-01-30T13:59:46.797856Z",
-     "shell.execute_reply": "2025-01-30T13:59:46.797268Z"
+     "iopub.execute_input": "2025-01-30T14:09:21.169129Z",
+     "iopub.status.busy": "2025-01-30T14:09:21.168792Z",
+     "iopub.status.idle": "2025-01-30T14:09:22.218666Z",
+     "shell.execute_reply": "2025-01-30T14:09:22.218114Z"
     }
    },
    "outputs": [
